--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>My FFXIV Achievements</title>
     <meta charset="utf-8" />
     <meta name="author" content="Niko Kovac from Odin Light Data Center" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
