added javascript for API request

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Niko Kovac from Odin Light Data Center" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="./logs.js"></script>
 </head>
 <body>
     <header>
