added one log file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta name="author" content="Niko Kovac from Odin Light Data Center" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="./logs.js"></script>
 </head>
 <body>
     <header>
@@ -30,6 +29,9 @@
             <h2>Raid Logs</h2>
             <div class="log-container">
                 <!--JavaScript code here for dynamically generated logs-->
+                <a href="https://www.fflogs.com/reports/cCW79pG31jQVqyBK#fight=22&type=damage-done" class="TEA-button">
+                    First TEA Clear
+                </a>
             </div>
         </section>
         <section class="about">
